refactor(contract): align contract lifecycle and strengthen domain validation
Set initial Contract status to INACTIVE to enforce explicit activation.
Update ContractTest and ContractServiceTest to reflect the new default lifecycle.
Fix ShopServiceImplTest by activating the contract before invoice generation.
Prevent misleading state mutation by restricting BundleProduct monthly fee modification.
Improve repository immutability and validation handling.
Align service-layer validation annotations and normalize error messages.

Refs: BUIZSOL-69750