@@ -13,7 +13,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 final class ProductRepositoryImpl implements ProductRepository {
 
@@ -33,35 +32,31 @@ final class ProductRepositoryImpl implements ProductRepository {
     }
 
     @Override
-    public void save(
-            @NotNull @Valid final Product product) {
+    public void save(@NotNull @Valid final Product product) {
         validateNotNull(product, "Product");
         storage.put(product.getId(), product);
     }
 
     @Override
-    public void update(
-            @NotNull @Valid final Product product) {
+    public void update(@NotNull @Valid final Product product) {
         validateNotNull(product, "Product");
         storage.put(product.getId(), product);
     }
 
     @Override
     @NotNull
-    public Optional<Product> findById(
-            @NotNull final UUID id) {
+    public Optional<Product> findById(@NotNull final UUID id) {
         validateNotNull(id, "ID");
         return Optional.ofNullable(storage.get(id));
     }
 
     @Override
     @NotNull
-    public Collection<Product> findByBrand(
-            @NotNull final Brand brand) {
+    public Collection<Product> findByBrand(@NotNull final Brand brand) {
         validateNotNull(brand, "Brand");
         return storage.values().stream()
                 .filter(product -> product.getBrand() == brand)
-                .collect(Collectors.collectingAndThen(Collectors.toList(), Collections::unmodifiableList));
+                .toList();
     }
 
     @Override
